bk_ida/gccida/c0/dw2_build_landing_pads
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dw2_build_landing_pads/src/except.c:2558:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v0; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dw2_build_landing_pads/src/except.c:2562:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dw2_build_landing_pads/src/except.c:2603:43: error: use of undeclared identifier 'arg0'
v3 = gen_rtx_fmt_s( ASM_INPUT, VOIDmode, &arg0); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dw2_build_landing_pads/src/except.c:2613:30: error: invalid suffix 'xmode' on integer constant
v6 = gen_rtx_REG( *(short *)0xmode, 1); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dw2_build_landing_pads/src/obj/except.o] Error 1
